fixed: size of mvw-logo on Safari

--- a/partials/styles/_topnav.scss
+++ b/partials/styles/_topnav.scss
@@ -26,6 +26,7 @@ $brand-padding: 0 10px 0 5px;
 
   > * {
     margin-top: 4px;
+    height: 43px;
   }
 }
 
